--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
         <div class="col-md-6">
             {{!-- Burgers available to eat --}}
 
-            <h2 id="style2">Burgers available to eat:</h2>
+            <h2 id="style2">&#10686; Burgers available to eat:</h2>
 
             <ul class="list">
                 {{#each burgers}} {{#unless devoured}}
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-6">
             {{!-- Burgers that are devoured --}}
-            <h2 id="style2">Burgers that have been devoured:</h2>
+            <h2 id="style2">&#10687; Burgers that have been devoured:</h2>
             <ul class="list">
                 {{#each burgers}}
                 {{#if devoured}}
@@ -39,7 +39,7 @@
 
     </div>
     {{!-- Make/add new burger --}}
-    <h2 id="style2">Make a new burger:</h2>
+    <h2 id="style2">&#128540; Make a new burger:</h2>
 
     <!-- Button for adding a burger -->
     <form class="create-update-form">
